CLOSED FIXED39491
[Qt] QtTestBrowser has two graphicsview options that aren't enabled correctly
https://bugs.webkit.org/show_bug.cgi?id=39491
Summary [Qt] QtTestBrowser has two graphicsview options that aren't enabled correctly
Jesus Sanchez-Palencia
Reported 2010-05-21 08:28:55 PDT
toggleResizesToContents and toggleTiledBackingStore must be "checkable" if we start running on graphics view mode. Patch is coming.
Attachments
patch (2.72 KB, patch)
2010-05-21 08:38 PDT, Jesus Sanchez-Palencia
no flags
Jesus Sanchez-Palencia
Comment 1 2010-05-21 08:38:42 PDT
Antonio Gomes
Comment 2 2010-05-21 08:41:08 PDT
maybe it is the same as bug 39070 ?
Jesus Sanchez-Palencia
Comment 3 2010-05-21 08:43:51 PDT
*** Bug 39070 has been marked as a duplicate of this bug. ***
Jesus Sanchez-Palencia
Comment 4 2010-05-21 08:44:33 PDT
(In reply to comment #2) > maybe it is the same as bug 39070 ? Yes! Marked as a duplicate since the patch is here already. Thanks!
Laszlo Gombos
Comment 5 2010-05-21 12:48:20 PDT
Comment on attachment 56712 [details] patch lgtm, r+. Thanks.
WebKit Commit Bot
Comment 6 2010-05-23 02:41:36 PDT
Comment on attachment 56712 [details] patch Clearing flags on attachment: 56712 Committed r60035: <http://trac.webkit.org/changeset/60035>
WebKit Commit Bot
Comment 7 2010-05-23 02:41:42 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 8 2010-05-25 01:44:41 PDT
Revision r60035 cherry-picked into qtwebkit-2.0 with commit 5a1c06a7b8b3eb22f74378fc98bad658e21695d0
Note You need to log in before you can comment on or make changes to this bug.