2010-05-23  Jesus Sanchez-Palencia  <jesus@webkit.org>

Reviewed by Laszlo Gombos.

        [Qt] QtTestBrowser has two graphicsview options that aren't enabled correctly
        https://bugs.webkit.org/show_bug.cgi?id=39491

        Making toggleResizesToContents and toggleTiledBackingStore checkable when
        QtTestBrowser is started on graphics view mode.

        * QtTestBrowser/main.cpp:
        (LauncherWindow::createChrome):

Canonical link: https://commits.webkit.org/51113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60035 268f45cc-cd09-0410-ab3c-d52691b4dbfc